First round of find bugs improvements
git-svn-id: http://geowebcache.org/svn/trunk@204 e7b91dd5-889a-44ae-8e97-0abfc27e49b2